Table Level gen